# Asthmoscope-MDPI-2025

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
experiments/asthmoscope_mdpi_2025/: experiment_config.py
src/: __init__.py  config.py  data_setup.py  main.py  prepare_experiment_data.py
src/audio_frontend/: __init__.py
src/networks/: SampleModel.py
src/notebooks/: analyze_predictions.ipynb
src/prepare_data/: dataloader.py  datasets.py  sampler.py
src/train/: mixup.py  pipeline.py  sample_fit.py
