[project]
name = "asthmoscope-mdpi-2025"
version = "0.1.0"
description = "Deep learning for pediatric asthma detection from respiratory sounds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiomentations>=0.43.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchlibrosa>=0.1.0",
    "torchvision>=0.23.0",
    "wandb>=0.22.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
